[metadata]
name = hed_utils
description = Personal utils collection for (mostly) automation projects.
author = Hrissimir
author-email = hrisimir.dakov@gmail.com
license = mit
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
platforms = any
url = https://github.com/Hrissimir/hed_utils
project-urls =
    Documentation = https://pyscaffold.org/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: Utilities

[options]
python_requires = >=3.6
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0

# `pip install hed_utils`:
install_requires =
    psutil==5.7.0
    tabulate==0.8.6
    pytz==2019.3
    tzlocal==2.0.0
    beautifulsoup4==4.8.2
    pathvalidate==2.2.0
    requests==2.23.0
    lxml==4.5.0
    openpyxl==3.0.3
    oauth2client==4.1.3
    gspread==3.2.0
    selenium==3.141.0

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# `pip install hed_utils[testing]`:
testing =
    coverage==5.0.3
    flake8==3.7.9
    pylint==2.4.4
    pytest==5.3.5
    pytest-cov==2.8.1
    pyscaffold[all]==3.2.3
    ddt==1.2.2
    twine==3.1.1

[options.entry_points]
console_scripts =
    rkill = hed_utils.cli.rkill:run

[test]
addopts = --verbose
extras = True

[tool:pytest]
addopts =
    --cov hed_utils
    --cov-report html
    --cov-report term-missing
    --verbose

norecursedirs =
    dist
    build
    .tox

testpaths = tests

[aliases]
dists = clean build sdist --format=zip bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 0

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats =
    sdist
    bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

max-complexity = 10
max-line-length = 120

[pyscaffold]
version = 3.2.3
package = hed_utils
extensions =
    no_skeleton
