[metadata]
name = hed_utils
description = Personal utils collection for (mostly) automation projects.
author = Hrissimir
author_email = hrisimir.dakov@gmail.com
license = mit
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
platforms = any
url = https://github.com/Hrissimir/hed_utils
project_urls =
    Documentation = https://pyscaffold.org/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: Utilities

[options]
python_requires = >=3.6
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0

# `pip install hed_utils`:
install_requires =
    more-itertools>=8.8.0
    tabulate>=0.8.9
    pytz>=2021.1
    tzlocal>=3.0
    python-dateutil>=2.8.2
    recurrent>=0.4.1
    python-dotenv>=0.19.0
    urllib3>=1.26.6
    requests>=2.26.0
    pathvalidate>=2.4.1
    lxml>=4.6.3
    html5lib>=1.1
    beautifulsoup4>=4.9.3
    appdirs>=1.4.4
    numpy>=1.21.2
    pandas>=1.3.2
    sqlalchemy>=1.4.23
    selenium>=3.141.0
    webdriverdownloader>=1.0.0
    pillow>=8.3.1
    matplotlib>=3.4.3
    psutil>=5.8.0
    click>=8.0.1
    openpyxl>=3.0.7
    oauth2client>=4.1.3
    gspread>=4.0.1

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# `pip install hed_utils[testing]`:
testing =
    setuptools
    setuptools-scm
    wheel
    virtualenv
    pipenv
    autopep8
    black
    coverage
    flake8
    pylint
    pytest
    pytest-cov
    ddt
    sphinx
    tox
    ipykernel
    twine
    pyscaffold[all]>=3.2.3

[options.entry_points]
console_scripts =
    rkill = hed_utils.cli.rkill:run
    csv-search = hed_utils.cli.csv_search:run

[test]
addopts = --verbose
extras = True

[tool:pytest]
addopts =
    --cov hed_utils
    --cov-report html
    --cov-report term-missing
    --verbose

norecursedirs =
    dist
    build
    .tox

testpaths = tests

[aliases]
dists = clean build sdist --format=zip bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 0

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats =
    sdist
    bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

max-complexity = 10
max-line-length = 120

[pyscaffold]
version = 3.2.3
package = hed_utils
extensions =
    no_skeleton
